--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "start": "nodemon app.js",
     "production": "NODE_ENV='production' node app.js",
     "test": "nyc --reporter=html --reporter=text --reporter=clover mocha --timeout 10000",
-    "clean": "rm -rf node_modules package-lock.json"
+    "clean": "rm -rf node_modules package-lock.json",
+    "eslint": "eslint ."
   },
   "description": "",
   "main": "app.js",
   "devDependencies": {
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
+    "eslint": "^8.23.1",
+    "eslint-plugin-react": "^7.31.8",
+    "javascript-style-guide": "^1.0.1",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0"
   },
