--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "homepage": "http://.",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "email-validator": "^2.0.4",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
