--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dotenv": "^16.0.2",
     "email-validator": "^2.0.4",
     "express": "^4.17.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.1",
     "morgan": "^1.10.0",
