--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.8.1",
+    "mongodb": "4.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
     "socket.io": "^4.5.2"
